=================
Changes for crash
=================

Unreleased
==========

 - Automatically suggest and complete to ``UPPERCASE`` keywords
   when using autocomplete.

 - Fixed issue that caused the `--sysinfo` command to fail after a connection.

 - Added support for opening an editor to edit the current command.
   This behaves similar as the same functionality in bash or zsh.

 - Added support for suspend (``Ctrl-z``)

2016/12/02 0.20.0
=================

 - Updated information_schema metadata queries to reflect the current state of
   CrateDB.

2016/11/18 0.19.1
=================

 - ``--sysinfo`` does not fail any more when the name of the connected CrateDB
   node contains a unicode character.

 - Crash was trying to connect to invalid hosts if no hosts were provided via
  ``--hosts`` argument and configuration file was already present.

2016/10/27 0.19.0
=================

 - Allow "short hosts" as Crate hosts argument,
   such as ``:4200`` for ``localhost:4200``

2016/10/12 0.18.1
=================

 - Fix: crashed in verbose mode if crate didn't provide an error trace

2016/09/23 0.18.0
=================

 - Don't show tables from ``pg_catalog`` if ``\dt`` command is used.

 - Make the ``\check`` command to display both, node and cluster checks.
   Allow ``node`` and ``cluster`` arguments for the command to display
   node and cluster checks, respectively.

2016/09/23 0.17.2
=================

 - Update autocompletion to reflect newest crate features

 - Require Pygments version greater or equal 2.0


2016/06/28 0.17.1
=================

 - Fix: crash_standalone could crash because it contained non-ascii character
   but no encoding was declared

2016/06/23 0.17.0
=================

 - Added support for OPTIMIZE table statement.

 - All statements will respond with an affected rows count now.

 - Added a configuration file that stores default values for Crash. The file is
   placed inside the user's application config folder.